[gd_scene load_steps=30 format=3 uid="uid://b47y40esxjr10"]

[ext_resource type="Script" path="res://scripts/player/player.gd" id="1_k8idb"]
[ext_resource type="Texture2D" uid="uid://cevk4sblmey23" path="res://assets/sprites/wick_sprite_sheet.png" id="2_wooee"]
[ext_resource type="PackedScene" uid="uid://bcqlvb85oyv2m" path="res://scenes/components/health_component.tscn" id="3_ekwt7"]
[ext_resource type="Script" path="res://scripts/state-machine/state_machine.gd" id="3_txmw8"]
[ext_resource type="Script" path="res://scripts/player/states/primary-states/player_idle_state.gd" id="4_47jr0"]
[ext_resource type="PackedScene" uid="uid://cynut52hv8i5c" path="res://scenes/components/gravity_component.tscn" id="4_qpbh1"]
[ext_resource type="Script" path="res://scripts/player/states/primary-states/player_move_state.gd" id="5_dolbb"]
[ext_resource type="Script" path="res://scripts/player/states/primary-states/player_jump_state.gd" id="6_vmp7e"]
[ext_resource type="Script" path="res://scripts/player/states/primary-states/player_fall_state.gd" id="7_j24fh"]
[ext_resource type="Script" path="res://scripts/player/states/primary-states/player_hurt_state.gd" id="10_k3l5u"]
[ext_resource type="Script" path="res://scripts/player/states/primary-states/player_death_state.gd" id="11_imntp"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dnu7f"]
radius = 31.0
height = 148.0

[sub_resource type="Animation" id="Animation_fq6jy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_3bysy"]
resource_name = "death"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [180, 181, 182, 183, 184, 185, 186, 187]
}

[sub_resource type="Animation" id="Animation_kbo7q"]
resource_name = "death_linger"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [185, 186, 187, 186]
}

[sub_resource type="Animation" id="Animation_3ci0u"]
resource_name = "fall"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [129, 130]
}

[sub_resource type="Animation" id="Animation_jxssi"]
resource_name = "fall_start_ground"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [126, 127, 128]
}

[sub_resource type="Animation" id="Animation_dgsr5"]
resource_name = "fall_start_jump"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [147, 146, 127, 128]
}

[sub_resource type="Animation" id="Animation_1kh8q"]
resource_name = "fall_stop"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [134, 135, 136]
}

[sub_resource type="Animation" id="Animation_amb8p"]
resource_name = "hurt"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [162, 163, 164]
}

[sub_resource type="Animation" id="Animation_2780d"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_epfon"]
resource_name = "jump_airborne"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [148, 149]
}

[sub_resource type="Animation" id="Animation_wlht3"]
resource_name = "jump_start"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [144, 145, 146, 147]
}

[sub_resource type="Animation" id="Animation_8jan5"]
resource_name = "produce_light"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05, 1.2, 1.35),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [108, 109, 110, 111, 112, 113, 114, 115, 116, 117]
}

[sub_resource type="Animation" id="Animation_1urkh"]
resource_name = "run"
length = 0.9
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [42, 43, 44, 45, 46, 47]
}

[sub_resource type="Animation" id="Animation_qvtrj"]
resource_name = "run_start"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 39, 40, 41]
}

[sub_resource type="Animation" id="Animation_nmso8"]
resource_name = "run_stop"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [49, 50, 51, 52, 53, 54]
}

[sub_resource type="Animation" id="Animation_rty8f"]
resource_name = "walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bt3oh"]
_data = {
"RESET": SubResource("Animation_fq6jy"),
"death": SubResource("Animation_3bysy"),
"death_linger": SubResource("Animation_kbo7q"),
"fall": SubResource("Animation_3ci0u"),
"fall_start_ground": SubResource("Animation_jxssi"),
"fall_start_jump": SubResource("Animation_dgsr5"),
"fall_stop": SubResource("Animation_1kh8q"),
"hurt": SubResource("Animation_amb8p"),
"idle": SubResource("Animation_2780d"),
"jump_airborne": SubResource("Animation_epfon"),
"jump_start": SubResource("Animation_wlht3"),
"produce_light": SubResource("Animation_8jan5"),
"run": SubResource("Animation_1urkh"),
"run_start": SubResource("Animation_qvtrj"),
"run_stop": SubResource("Animation_nmso8"),
"walk": SubResource("Animation_rty8f")
}

[node name="Wick" type="CharacterBody2D" node_paths=PackedStringArray("animation_player", "debug_label", "coyote_timer", "gravity_component", "health_component", "iframe_timer", "input_buffer_timer", "knockback_timer", "sprite", "primary_state_machine")]
collision_layer = 4
collision_mask = 11
script = ExtResource("1_k8idb")
animation_player = NodePath("AnimationPlayer")
debug_label = NodePath("DebugLabel")
coyote_timer = NodePath("CoyoteTimer")
gravity_component = NodePath("GravityComponent")
health_component = NodePath("HealthComponent")
iframe_timer = NodePath("IFrameTimer")
input_buffer_timer = NodePath("InputBufferTimer")
knockback_timer = NodePath("KnockbackTimer")
sprite = NodePath("Sprite")
primary_state_machine = NodePath("PrimaryStateMachine")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_wooee")
hframes = 18
vframes = 11

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(3, 17)
shape = SubResource("CapsuleShape2D_dnu7f")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bt3oh")
}

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="IFrameTimer" type="Timer" parent="."]
one_shot = true

[node name="InputBufferTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="KnockbackTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="HealthComponent" parent="." node_paths=PackedStringArray("i_frame_timer") instance=ExtResource("3_ekwt7")]
i_frame_timer = NodePath("../IFrameTimer")
max_health = 5.0

[node name="GravityComponent" parent="." instance=ExtResource("4_qpbh1")]

[node name="PrimaryStateMachine" type="Node" parent="." node_paths=PackedStringArray("current_state", "parent")]
script = ExtResource("3_txmw8")
current_state = NodePath("Idle")
parent = NodePath("..")

[node name="Idle" type="Node" parent="PrimaryStateMachine"]
script = ExtResource("4_47jr0")

[node name="Move" type="Node" parent="PrimaryStateMachine"]
script = ExtResource("5_dolbb")

[node name="Jump" type="Node" parent="PrimaryStateMachine"]
script = ExtResource("6_vmp7e")

[node name="Fall" type="Node" parent="PrimaryStateMachine"]
script = ExtResource("7_j24fh")

[node name="Hurt" type="Node" parent="PrimaryStateMachine"]
script = ExtResource("10_k3l5u")

[node name="Death" type="Node" parent="PrimaryStateMachine"]
script = ExtResource("11_imntp")

[node name="DebugLabel" type="Label" parent="."]
offset_left = 51.0
offset_top = -212.0
offset_right = 278.0
offset_bottom = -91.0
theme_override_font_sizes/font_size = 20
text = "Current State: Idle
Velocity: (0,0)
Buffed Input: 
Current Animation: idle"

[connection signal="timeout" from="InputBufferTimer" to="." method="_on_input_buffer_timer_timeout"]
[connection signal="timeout" from="KnockbackTimer" to="." method="_on_knockback_timer_timeout"]
